feat(dashboard): show the company's representative instead of the responsible accountant
The dashboard people column and filter now reflect each company's representative(s)
— the client-side contact(s) from representative_link — rather than the responsible
accountant. A company may have several representatives (names are joined); the filter
lists every representative and keeps companies where the chosen rep is assigned.

This fixes the "responsible not shown" cases: companies that had no responsible
accountant assigned but do have representatives (e.g. INNOVATECODE, MERIC) now show
them. Companies with no representative still show "—" (accurate).

Payroll N/A behaviour is unchanged (companies without employees stay N/A by design).

Backend: DashboardView.CompanyRow carries List<Person> representatives; DashboardService
resolves them in bulk (new RepresentativeLinkRepository.findByCompanyIdIn) and filters by
representative; the /api/v1/dashboard param is renamed responsible -> representative.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>